# aca-assessor

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
aca_assessor/: __init__.py  analyzer.py  cli.py  collector.py  config.py
docs/: ask.md  sample-config.yaml
